--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -1037,6 +1037,8 @@ items:
                   href: /powerapps/guidance/patterns/more-patterns?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/toc.json
             - name: Plan a Power Apps project
               href: /powerapps/guidance/planning/introduction
+            - name: Real-world architecture examples
+              href: /power-platform/guidance/architecture/real-world-examples/overview
             - name: Create a workflow with Power Automate
               href: /power-automate/getting-started?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/toc.json
             - name: Automate tasks with robotic process automation (RPA)
