--- a/docs/index.yml
+++ b/docs/index.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Hub
 
 title: Microsoft Cloud Adoption Framework for Azure
-summary: The Cloud Adoption Framework is a collection of documentation, implementation guidance, best practices, and tools that are proven guidance from Microsoft designed to accelerate your cloud adoption journey.
+summary: Get Microsoft's proven best practices guidance, including documentation, implementation guidance, best practices, and tools that are designed to accelerate your cloud adoption journey.
 brand: azure
 
 metadata:
 
   title: Microsoft Cloud Adoption Framework for Azure
-  description: The Cloud Adoption Framework is a collection of documentation, implementation guidance, best practices, and tools that accelerate your cloud adoption journey.
+  description: Get Microsoft's proven best practices guidance, including documentation, implementation guidance, best practices, and tools that are designed to accelerate your cloud adoption journey.
   services: cloud-adoption-framework
   author: JanetCThomas
   ms.author: janet
-  ms.date: 03/03/2022
+  ms.date: 03/14/2022
   ms.topic: hub-page
   ms.service: cloud-adoption-framework
   ms.subservice: overview
@@ -25,22 +25,22 @@ highlightedContent:
   items:
 
     # Card
-    - title: Scenarios
+    - title: Explore scenarios 
       itemType: overview
       url: ./scenarios/index.md
 
     # Card
-    - title: Tools and templates
+    - title: Get tools and templates
       itemType: download
       url: ./resources/tools-templates.md
 
     # Card
-    - title: What's new
+    - title: Find out what's new
       itemType: whats-new
       url: ./get-started/whats-new.md
 
     # Card
-    - title: About the Cloud Adoption Framework
+    - title: Learn about the Framework
       itemType: overview
       url: ./overview.md
 
@@ -48,14 +48,14 @@ highlightedContent:
 
 productDirectory:
   title: Cloud Adoption Framework guidance # < 60 chars (optional)
-  summary: Find guidance for each methodology as you proceed through your cloud adoption journey. # < 160 chars (optional)
+  summary: Find guidance for each of your cloud adoption journey. # < 160 chars (optional)
   items:
 
     # Card
     - title: Get started
 
       # imageSrc should be square in ratio with no whitespace
-      imageSrc: ./_images/caf-get-started.png
+      imageSrc: ./_images/icons/get-started.png
       links:
         - url: ./get-started/index.md
           text: Get started
@@ -90,7 +90,7 @@ productDirectory:
         - url: ./plan/suggested-skills.md
           text: Skills readiness plan
         - url: ./plan/template.md
-          text: Cloud adoption plan for DevOps
+          text: DevOps cloud adoption plan
 
     # Card
     - title: Ready
@@ -114,7 +114,7 @@ productDirectory:
         - url: ./scenarios/index.md
           text: Migration scenarios
         - url: ./migrate/azure-best-practices/index.md
-          text: Best practices for cloud migration
+          text: Cloud migration best practices
         - url: ./migrate/migration-considerations/index.md
           text: Process improvements
 
@@ -170,7 +170,43 @@ productDirectory:
         - url: ./govern/foundation-improvements.md
           text: Improve the foundation
 
+# conceptualContent section (optional)
 
+conceptualContent:
+
+# itemType: architecture, concept, deploy, download, get-started, how-to-guide, learn, overview, quickstart, reference, sample, tutorial, video, whats-new
+
+  title: Assessments # < 60 chars (optional)
+  summary: Plan your cloud journey by using an assessment. An assessment helps you measure the difference between your current state and your cloud adoption goals. Assessment results provide curated technical guidance to help you reach your goals. # < 160 Chars (optional)
+  items:
+
+     # Card
+    - title: Cloud Adoption Strategy Evaluator
+      links:
+        - url: /assessments/?mode=pre-assessment&id=8fefc6d5-97ac-42b3-8e97-d82701e55bab
+          itemType: quickstart
+          text: Build and advance your cloud business case with the cloud adoption strategy assessment.
+
+    # Card
+    - title: Cloud Journey Tracker
+      links:
+        - url: /assessments/?id=cloud-journey-tracker&mode=pre-assessment
+          itemType: get-started
+          text: Identify your cloud adoption path, based on the unique needs of your business.
+
+    # Card
+    - title: Strategic Migration Assessment and Readiness Tool (SMART)
+      links:
+        - url: /assessments/?id=Strategic-Migration-Assessment&mode=pre-assessment
+          itemType: get-started
+          text: Drive business success by unblocking migration efforts and improving processes.
+
+    # Card
+    - title: Governance benchmark
+      links:
+        - url: https://www.cafbaseline.com
+          itemType: quickstart
+          text: Identify gaps between your current state and business priorities. Get the right resources to help you address the gaps.
 
 # tools section (optional)
 
@@ -178,7 +214,7 @@ tools:
   title: Build your skills with Microsoft Learn
 
  # < 60 Chars (optional)
-  summary: Learn more about Azure and the Cloud Adoption Framework by completing the following Microsoft Learn modules.
+  summary: Learn more about Azure and the Cloud Adoption Framework by completing these learning paths.
   items:
 
     # Card
@@ -198,44 +234,6 @@ tools:
       imageSrc: ./_images/learn-business-value-of-azure-logo.png
       url: /learn/modules/microsoft-cloud-adoption-framework-for-azure/
 
-# conceptualContent section (optional)
-
-conceptualContent:
-
-# itemType: architecture, concept, deploy, download, get-started, how-to-guide, learn, overview, quickstart, reference, sample, tutorial, video, whats-new
-
-  title: Assessments # < 60 chars (optional)
-  summary: Use assessments to help plan your cloud journey. Identify differences between your current and desired states, with personalized recommendations to help you reach your cloud adoption goals. # < 160 Chars (optional)
-  items:
-
-     # Card
-    - title: Cloud Adoption Strategy Evaluator
-      links:
-        - url: /assessments/?mode=pre-assessment&id=8fefc6d5-97ac-42b3-8e97-d82701e55bab
-          itemType: quickstart
-          text: Assess your cloud adoption strategy, and receive recommendations for building and advancing your cloud business case.
-
-    # Card
-    - title: Cloud Journey Tracker
-      links:
-        - url: /assessments/?id=cloud-journey-tracker&mode=pre-assessment
-          itemType: get-started
-          text: Identify your cloud adoption path, based on the unique needs of your business.
-
-    # Card
-    - title: Strategic Migration Assessment and Readiness Tool (SMART)
-      links:
-        - url: /assessments/?id=Strategic-Migration-Assessment&mode=pre-assessment
-          itemType: get-started
-          text: Unblock your migration efforts, improve your processes, and drive your business success.
-
-    # Card
-    - title: Governance benchmark
-      links:
-        - url: https://www.cafbaseline.com
-          itemType: quickstart
-          text: Identify gaps between your current state and business priorities. Get the right resources to help you address the gaps.
-
 # additionalContent section (optional)
 
 # Card with summary style
@@ -244,18 +242,18 @@ additionalContent:
 
   # Supports up to 3 sections
   sections:
-    - title: Find support  # < 60 chars (optional)
-      summary: If you're blocked in your cloud adoption journey, Microsoft has dedicated resources to help you get unblocked.  # < 160 chars (optional)
+    - title: Find help  # < 60 chars (optional)
+      summary: Microsoft has dedicated resources to help unblocked your cloud adoption journey.  # < 160 chars (optional)
       items:
 
         # Card
         - title: FastTrack for Azure
-          summary: Get help from Microsoft engineers
+          summary: Get support from Microsoft engineers
           url: https://azure.microsoft.com/programs/azure-fasttrack/
 
         # Card
         - title: Azure migration and modernization program
-          summary: Get help migrating workloads to the cloud
+          summary: Get support migrating workloads to the cloud
           url: https://azure.microsoft.com/migration/migration-modernization-program/
 
         # Card
@@ -264,4 +262,4 @@ additionalContent:
           url: https://aka.ms/adopt/findapartner
 
   # footer (optional)
-  footer: "See why the Cloud Adoption Framework is right for your business. [https://aka.ms/adopt](https://azure.microsoft.com/cloud-adoption-framework)"
+  footer: "Why Microsoft Cloud Adoption Framework for Azure is right for your business. [https://aka.ms/adopt](https://azure.microsoft.com/cloud-adoption-framework)"
