link update for scenarios
link update for scenarios

--- a/docs/index.yml
+++ b/docs/index.yml
@@ -27,7 +27,7 @@ highlightedContent:
     # Card
     - title: Explore scenarios 
       itemType: overview
-      url: ./scenarios/index.md
+      url: ./scenarios/overview.md
 
     # Card
     - title: Get tools and templates
