--- a/docs/scenarios/hybrid/toc.yml
+++ b/docs/scenarios/hybrid/toc.yml
@@ -17,7 +17,7 @@ items:
     items:
     - name: Azure landing zones
       href: ready.md
-    - name: Introduction to Azure Arc landing zone accelerator for hybrid
+    - name: Introduction to Azure Arc landing zone accelerator for hybrid and multicloud
       href: enterprise-scale-landing-zone.md
     - name: Azure Arc-enabled servers
       items:
@@ -61,6 +61,8 @@ items:
       items:
       - name: Start with Azure Arc-enabled servers landing zone accelerator sandbox
         href: arc-enabled-servers/enterprise-scale-landing-zone-sandbox.md
+      - name: Start with Azure Arc-enabled Kubernetes landing zone accelerator sandbox
+        href: arc-enabled-kubernetes/enterprise-scale-landing-zone-sandbox.md
 
   - name: Migrate to the cloud
     href: migrate.md
