--- a/docs/index.yml
+++ b/docs/index.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Hub
 
 title: Microsoft Cloud Adoption Framework for Azure
-summary: Get proven guidance to help your organization define and implement business, technology, and people strategies to securely adopt the cloud with confidence and reach desired business outcomes.
+summary: Proven guidance and best practices that help you confidently adopt the cloud and achieve business outcomes.
 brand: azure
 
 metadata:
 
   title: Microsoft Cloud Adoption Framework for Azure
-  description: Get proven guidance to help your organization define and implement business, technology, and people strategies to securely adopt the cloud with confidence and reach desired business outcomes.
+  description: Proven guidance and best practices that help you confidently adopt the cloud and achieve business outcomes.
   services: cloud-adoption-framework
   author: JanetCThomas
   ms.author: janet
-  ms.date: 03/14/2022
+  ms.date: 03/31/2022
   ms.topic: hub-page
   ms.service: cloud-adoption-framework
   ms.subservice: overview
